# DSP-HW

./: .gitignore  README.md  main.py  proposal.md  pyproject.toml
ESC-50/: .gitignore  LICENSE  README.md  pytest.ini  requirements.txt
ESC-50/.circleci/: config.yml
ESC-50/.github/: stale.yml
ESC-50/tests/: test_dataset.py
audioset_tagging_cnn/: models.py
data/processed/: log.json
docs/: retrieval_task_plan.md
experiments/: 01_dsp_verification.ipynb  03_task2_classification.py  all_retrieval_experiments.py
experiments/retrieval/: run_ablations.py  run_deep_retrievers.py  run_efficiency.py  run_fusion.py  run_grid_search.py  run_partial.py  run_pretrained.py  run_retrieval.py  run_robustness.py  run_twostage.py
experiments/training/: train_autoencoder.py  train_cnn.py  train_contrastive.py
report/: generate_retrieval_report.py  main.tex  retrieval.md
scripts/: grid_search.py  run_frame_experiments.py  test_clap_zeroshot.py
src/classification/: __init__.py  augment.py  features.py  train.py
src/data/: __init__.py  esc50.py
src/dsp_core/: __init__.py  fft.py  mel.py  mfcc.py  stft.py
src/dsp_core_external/: __init__.py  fft.py  mel.py  mfcc.py
tests/: test_dsp_core.py
visualization/: __init__.py  config.py  data_loader.py  fig10_fold_variance.py  fig1_method_comparison.py  fig2_method_categories.py  fig3_grid_search.py  fig4_ablations.py  fig5_robustness.py  fig6_efficiency.py  fig7_fusion_twostage.py  fig8_partial_query.py  fig9_twostage_pareto.py  generate_all.py
volc_logs/: cs2_job_jjliu_1205_0020_02.sh  cs2_job_jjliu_1205_0020_02.yaml
(+89 files in other folders)
