[project]
name = "dsp-hw"
version = "0.1.0"
description = "DSP Course Final Project - Sound Retrieval and Classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "librosa>=0.10.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "pandas>=2.0.0",
    "numba>=0.57.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ipython>=8.0.0",
]
